--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/app.js -e js,hbs,html,css"
+    "start": "nodemon src/app.js -e js,hbs,html,css"
   },
   "keywords": [],
   "author": "",
@@ -13,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.1",
     "hbs": "^4.2.0",
+    "heroku": "^7.63.4",
     "mongodb": "^4.9.1",
     "mongoose": "^6.6.0",
     "nodemon": "^2.0.19",
